--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ builds/
 *.gif
 scores.bin
 audio/
+winRun.cmd
+winEdit.cmd
+mapedit.exe
+config.rec
+contractor.exe
+winRun.cmd
+winEdit.cmd
+config.rec
+winRun.cmd
+winEdit.cmd
+config.rec
